added stule guide sections, more mockups and more. fixed about font.

--- a/src/hereafter.html
+++ b/src/hereafter.html
@@ -459,14 +459,7 @@
       </div>
     </div>
   </section>
-  <section class="image-display-section w-full px-4 md:px-24  border-grey border-b ">
-    <div class="image-container">
-      <img src="hereafter-midfi.png" class="border border-grey border-t-0 w-full" alt="All Features">
-      <div class="border-grey border-x sm:px-4">
-        <h6 class="py-3">Fig 1. Shirely's Journey. </h6>
-      </div>
-    </div>
-  </section>
+
   <section class="flex flex-col lg:flex-row py-12 pb-24 sm:px-10 justify-between px-4 border-grey border-b">
     <!-- Heading Section -->
     <div class="w-full lg:w-[30%] lg:px-16">
@@ -481,34 +474,128 @@
           </div>
         </div>
   </section>
-
-  <section class="image-display-section w-full px-4 md:px-24  border-grey">
-
-    <div class="image-container px-24">
-      <div class="border-grey border-x sm:px-4  border-b">
+  <section class="image-display-section w-full px-4 md:px-24  border-grey border-b ">
+    <div class="image-container">
+      <img src="hereafter-midfi.png" class="border border-grey border-t-0 w-full" alt="All Features">
+      <div class="border-grey border-x sm:px-4">
         <h6 class="py-3">Fig 1. Shirely's Journey. </h6>
       </div>
-      <img src="hereafter-use-home.png" class="border border-grey border-t-0 w-full" alt="All Features">
     </div>
   </section>
 
-  <section class="image-display-section w-full px-4 md:px-24  border-grey">
-    <div class="image-container px-24">
-      <div class="border-grey border-x sm:px-4  border-b">
-        <h6 class="py-3">Fig 1. Shirely's Journey. </h6>
-      </div>
-      <img src="hereafter-use-form.png" class="border border-grey border-t-0 w-full" alt="All Features">
-    </div>
-  </section>
-  <section class="image-display-section w-full px-4 md:px-24  border-grey">
-    <div class="image-container px-24">
-      <div class="border-grey border-x sm:px-4  border-b">
-        <h6 class="py-3">Fig 1. Shirely's Journey. </h6>
-      </div>
-      <img src="hereafter-use-entry.png" class="border border-grey border-t-0 w-full" alt="All Features">
-    </div>
-  </section>
   
+<section class="flex flex-col lg:flex-row py-12 pb-16 px-4 sm:px-10 justify-between border-grey border-b">
+  <!-- Heading Section -->
+  <div class="w-full lg:w-[30%] lg:px-16">
+    <h4 class="pt-[0.75rem]">Usability Testing    </h4>
+  </div>
+  <div class="flex flex-col lg:px-16 gap-10 lg:w-[70%]">
+    <div class="flex flex-col gap-3 pt-4">
+      <h4 class="text-left">I recruited two participants through cold emailing—one who journals often and another who doesn’t. Each test lasted around 20 minutes over Zoom, where participants shared their screens while completing the task of writing a journal entry in a mid-fidelity prototype. I logged successes and failures at each step and asked follow-up questions about ease of use, prompts, editing entries, likes/dislikes, and overall ratings.
+      </h4>
+      <div class="flex flex-col gap-8 pt-4">
+        <p class="text-left">THE FINDINGS AND ACTION ITEMS:        </p>
+        <div class="text-left">
+          <h4>Following this process, my group and I shared our findings and gathered the following findings and action items moving forward into the high-fi design stage.
+            </h4>
+            <h4>Our usability testing revealed actionable insights, underscoring the importance of continuous iteration in the design process. 
+              </h4>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="image-display-section w-full px-4 md:px-24  border-grey">
+  <div class="image-container px-24">
+    <div class="border-grey border-x sm:px-4  border-b">
+      <h6 class="py-3">Fig 1. Shirely's Journey. </h6>
+    </div>
+    <img src="hereafter-use-home.png" class="border border-grey border-t-0 w-full" alt="All Features">
+  </div>
+</section>
+<section class="image-display-section w-full px-4 md:px-24  border-grey">
+  <div class="image-container px-24">
+    <div class="border-grey border-x sm:px-4  border-b">
+      <h6 class="py-3">Fig 1. Shirely's Journey. </h6>
+    </div>
+    <img src="hereafter-use-form.png" class="border border-grey border-t-0 w-full" alt="All Features">
+  </div>
+</section>
+<section class="image-display-section w-full px-4 md:px-24  border-grey">
+  <div class="image-container px-24">
+    <div class="border-grey border-x sm:px-4  border-b">
+      <h6 class="py-3">Fig 1. Shirely's Journey. </h6>
+    </div>
+    <img src="hereafter-use-entry.png" class="border border-grey border-t-0 w-full" alt="All Features">
+  </div>
+</section>
+
+<section class="flex flex-col lg:flex-row py-12 pb-16 px-4 sm:px-10 justify-between border-grey border-b">
+  <!-- Heading Section -->
+  <div class="w-full lg:w-[30%] lg:px-16">
+    <h4 class="pt-[0.75rem]">Style Guide   </h4>
+  </div>
+  <div class="flex flex-col lg:px-16 gap-10 lg:w-[70%]">
+    <div class="flex flex-col gap-3 pt-4">
+      <h4 class="text-left">I recruited two participants through cold emailing—one who journals often and another who doesn’t. Each test lasted around 20 minutes over Zoom, where participants shared their screens while completing the task of writing a journal entry in a mid-fidelity prototype. I logged successes and failures at each step and asked follow-up questions about ease of use, prompts, editing entries, likes/dislikes, and overall ratings.
+      </h4>
+      <div class="flex flex-col gap-8 pt-4">
+        <p class="text-left">THE FINDINGS AND ACTION ITEMS:        </p>
+        <div class="text-left">
+          <h4>Following this process, my group and I shared our findings and gathered the following findings and action items moving forward into the high-fi design stage.
+            </h4>
+            <h4>Our usability testing revealed actionable insights, underscoring the importance of continuous iteration in the design process. 
+              </h4>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="image-display-section w-full px-4 md:px-24  border-grey">
+  <div class="image-container px-24">
+    <div class="border-grey border-x sm:px-4  border-b">
+      <h6 class="py-3">Fig 1. Shirely's Journey. </h6>
+    </div>
+    <img src="hereafter-ds2.png" class="border border-grey border-t-0 w-full" alt="All Features">
+  </div>
+</section>
+<section class="image-display-section w-full px-4 md:px-24  border-grey">
+  <div class="image-container px-24">
+    <div class="border-grey border-x sm:px-4  border-b">
+      <h6 class="py-3">Fig 1. Shirely's Journey. </h6>
+    </div>
+    <img src="hereafter-ds.png" class="border border-grey border-t-0 w-full" alt="All Features">
+  </div>
+</section>
+
+<section class="flex flex-col lg:flex-row py-12 pb-16 px-4 sm:px-10 justify-between border-grey border-b">
+  <!-- Heading Section -->
+  <div class="w-full lg:w-[30%] lg:px-16">
+    <h4 class="pt-[0.75rem]">Final Outcomes    </h4>
+  </div>
+  <div class="flex flex-col lg:px-16 gap-10 lg:w-[70%]">
+    <div class="flex flex-col gap-3 pt-4">
+      <h4 class="text-left">Here:after, as a whole, offers a simple and efficient journaling experience tailored for students with limited time. Its design prioritizes accessibility and makes it easier for users to understand and express their emotional patterns.
+      </h4>
+      <div class="flex flex-col gap-8 pt-4">
+        <p class="text-left">HIGHLIGHTS        </p>
+        <div class="text-left">
+          <h4>Following this process, my group and I shared our findings and gathered the following findings and action items moving forward into the high-fi design stage.
+            </h4>
+            <h4>Our usability testing revealed actionable insights, underscoring the importance of continuous iteration in the design process. 
+              </h4>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
   </main>
 
   
