--- a/src/hereafter.html
+++ b/src/hereafter.html
@@ -15,6 +15,8 @@
   <!-- Import the header component -->
   <script src="header.js" type="module"></script>
   <header-component></header-component>
+  <script src="scroll-to-top.js" type="module"></script>
+  <scroll-component></scroll-component>
 
   <!-- Dynamic Cursor -->
   <div class="cursor">
@@ -26,7 +28,7 @@
   <main>
 <!-- Content Section -->
 <main>
-    <div class="py-60 pt-32 bg-[#f0f0f1] flex-col gap-8 px-4 md:px-10 bg-[url('hereafter-hero.png')] bg-cover bg-center">
+    <div class="py-60 pt-4 md:pt-32 bg-[#f0f0f1] flex-col gap-8 px-4 md:px-10 bg-[url('hereafter-hero.png')] bg-cover bg-center">
       <!-- Back Section -->
       <a href="index.html">
         <div class="pb-1 w-20 md:w-24 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center bg-white
@@ -53,16 +55,16 @@
       </div>
     </div>
         
-      <div class="flex flex-row w-full lg:px-16 gap-4">
-        <div class="flex-grow p-4 pt-0 pl-0 flex flex-col gap-1 border-b border-grey w-1/3">
+      <div class="flex md:flex-row flex-col w-full lg:px-16 gap-4">
+        <div class="flex-grow p-4 pt-0 pl-0 flex flex-col gap-1 border-b border-grey md:w-1/3">
           <p>AWARD</p>
           <h6>Tie-Winner in UX Design, RDG Student Awards 2023</h6>
         </div>
-        <div class="flex-grow p-4 pt-0 pl-0 flex flex-col gap-1 border-b border-grey  w-1/3">
+        <div class="flex-grow p-4 pt-0 pl-0 flex flex-col gap-1 border-b border-grey  md:w-1/3">
           <p>TIMELINE</p>
           <h6>January 13, 2023 – April 7, 2023</h6>
         </div>
-        <div class="flex-grow p-4 pt-0 pl-0 flex flex-col gap-1 border-b border-grey  w-1/3">
+        <div class="flex-grow p-4 pt-0 pl-0 flex flex-col gap-1 border-b border-grey  md:w-1/3">
           <p>TEAM</p>
           <h6>Jersey Stuart, Rita Zhan, Shriya Mujumdar</h6>
         </div>
@@ -83,11 +85,11 @@
   
 
     <!-- Feature Highlights -->
-    <section class="image-display-section w-full px-4 md:px-24  border-grey border-b">
+    <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
       <div class="image-container">
-        <img src="hereafter-all-features.png" class="border border-grey border-t-0 w-full" alt="All Features">
-        <div class="border-grey border-x sm:px-4">
-          <h6 class="py-3">Fig 1. In-app features. </h6>
+        <img src="hereafter-all-features.png" class="md:border border-grey md:border-t-0 w-full" alt="All Features">
+        <div class="md:border-grey border-x sm:px-4">
+          <h6 class="py-3 px-4 sm:px-0">Fig 1. In-app features. </h6>
         </div>
       </div>
     </section>
@@ -120,15 +122,15 @@
   </div>
 </section>
 
-
-<section class="image-display-section w-full px-4 md:px-24  border-grey border-b">
+<section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
   <div class="image-container">
-    <img src="hereafter-flow.png" class="border border-grey border-t-0 w-full" alt="All Features">
-    <div class="border-grey border-x sm:px-4">
-      <h6 class="py-3">Fig 2. Home Page and User Flow. </h6>
+    <img src="hereafter-flow.png" class="md:border border-grey md:border-t-0 w-full" alt="All Features">
+    <div class="md:border-grey border-x sm:px-4">
+      <h6 class="py-3 px-4 sm:px-0">Fig 2. Home Page and User Flow. </h6>
     </div>
   </div>
 </section>
+
 
 <!-- Product Development Section -->
 <section class="flex flex-col lg:flex-row py-12 pb-24 sm:px-10 justify-between px-4 border-grey border-b">
@@ -234,35 +236,35 @@
          Clustering our notes into affinity maps allowed us to realize these insights about the students.
       </h3>
     </div>
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-4">
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-4 pr-4">
       <!-- Poor Mental Health -->
-      <div class="box bg-blue-200 p-4 rounded text-left">
+      <div class="box bg-purple-100 p-4 rounded text-left">
         <h3 class="font-semibold pb-3">50%</h3> 
         <h4>Have limited awareness of affordable mental health resources.</h4>
       </div>
       <!-- Motivation -->
-      <div class="box bg-blue-200 p-4 rounded text-left">
+      <div class="box bg-purple-100 p-4 rounded text-left">
         <h3 class="font-semibold pb-3">37.5%</h3> 
         <h4>Had difficulty prioritizing their mental health due to lack of time & motivation.</h4>
       </div>
       <!-- Routine -->
-      <div class="box bg-blue-200 p-4 rounded text-left">
+      <div class="box bg-purple-100 p-4 rounded text-left">
         <h3 class="font-semibold pb-3">37.5%</h3> 
         <h4>Mentioned challenges in maintaining regular reflective practices.</h4>
       </div>
       <!-- Convenience -->
-      <div class="box bg-blue-200 p-4 rounded text-left">
+      <div class="box bg-purple-100 p-4 rounded text-left">
         <h3 class="font-semibold pb-3">25%</h3> 
         <h4>Expressed a desire for quick and effortless mental health tools.
         </h4>
       </div>
       <!-- Anxiety -->
-      <div class="box bg-blue-200 p-4 rounded text-left">
+      <div class="box bg-purple-100 p-4 rounded text-left">
         <h3 class="font-semibold pb-3">62.5%</h3> 
         <h4> Cited difficulties in managing their stress & anxiety levels</h4>
       </div>
       <!-- Openness -->
-      <div class="box bg-blue-200 p-4 rounded text-left">
+      <div class="box bg-purple-100 p-4 rounded text-left">
         <h3 class="font-semibold pb-3">50%</h3> 
         <h4>Were hesitant to confide in others due to fear of judgment.        </h4>
       </div>
