alot of changes to responsiveness

--- a/src/accessichat.html
+++ b/src/accessichat.html
@@ -39,10 +39,11 @@
   <section class="flex flex-col pt-8 md:pt-12 sm:px-10 pb-8 md:pb-12 gap-10 px-4 border-grey border-b">
     <div class="flex flex-col lg:px-16 gap-10 lg:w-[80%]">
       <div class="flex flex-col gap-8 pt-1">
-        <h2>Here:after — UX Award-Winner</h2>
+        <h2>Accessichat — Honourable Mention in Augmented Creativity</h2>
         <h4>
-          Here:after is designed to simplify self-reflection for students. This project emerged from an assignment for my interaction design class, but evolved into a solution that accomplished
-          <i><u>First Place in the UX category of 2023 RGD Student Awards</u></i> :)
+            AccessiChat is an augmentative and alternative communication (AAC) application designed to improve verbal and written communication for individuals with visible and invisible disabilities.
+            The app leverages AI to provide accessible communication tools,
+            helping users achieve greater independence and confidence in their daily interactions.
         </h4>
       </div>
     </div>
@@ -50,15 +51,15 @@
       <div class="flex md:flex-row flex-col w-full lg:px-16 gap-4">
         <div class="flex-grow p-4 pt-0 pl-0 flex flex-col gap-1 border-b border-grey md:w-1/3">
           <p>AWARD</p>
-          <h6>Tie-Winner in UX Design, RDG Student Awards 2023</h6>
+          <h6>Honourable Mention in Augmented Creativity, RDG Student Awards 2024</h6>
         </div>
         <div class="flex-grow p-4 pt-0 pl-0 flex flex-col gap-1 border-b border-grey  md:w-1/3">
           <p>TIMELINE</p>
-          <h6>January 13, 2023 – April 7, 2023</h6>
+          <h6>June 19, 2023 – July 20, 2023</h6>
         </div>
         <div class="flex-grow p-4 pt-0 pl-0 flex flex-col gap-1 border-b border-grey  md:w-1/3">
           <p>TEAM</p>
-          <h6>Jersey Stuart, Rita Zhan, Shriya Mujumdar</h6>
+          <h6>Farwa Babar, Adrianna Estrada</h6>
         </div>
       </div>
       <div class="flex flex-col lg:px-16">
