moved design to archive, changed spacing/optimized things for mobile, changed buttons and hovers updated images

--- a/src/accessichat.html
+++ b/src/accessichat.html
@@ -126,7 +126,7 @@
   <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
     <div class="image-container">
       <div class="md:border-grey border-x sm:px-4">
-        <h6 class="py-3 px-4 sm:px-0">Fig 10. Writing an Entry Findings.</h6>
+        <h6 class="py-3 px-4 sm:px-0">Fig 2. Goal and Routine Setting Screens.</h6>
       </div>
       <img src="accessichat4.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
     </div>
@@ -135,7 +135,7 @@
   <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
     <div class="image-container">
       <div class="md:border-grey border-x sm:px-4">
-        <h6 class="py-3 px-4 sm:px-0">Fig 10. Writing an Entry Findings.</h6>
+        <h6 class="py-3 px-4 sm:px-0">Fig 3. Scenario Practice Screens.</h6>
       </div>
       <img src="accessichat3.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
     </div>
@@ -198,7 +198,7 @@
     <div class="image-container">
       <img src="accessichat-empathy-map.jpg" class="md:border border-grey md:border-t-0 w-full" alt="All Features">
       <div class="md:border-grey border-x sm:px-4">
-        <h6 class="py-3 px-4 sm:px-0">Fig 2. Our Empathy Maps based on 3 Real Users</h6>
+        <h6 class="py-3 px-4 sm:px-0">Fig 4. Our Empathy Maps based on 3 Users</h6>
       </div>
     </div>
   </section>
@@ -285,7 +285,7 @@
   <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
     <div class="image-container">
       <div class="md:border-grey border-x sm:px-4">
-        <h6 class="py-3 px-4 sm:px-0">Fig 6. Competitive Analysis on AAC Communication, Managing Overstimulation & AI/VR.</h6>
+        <h6 class="py-3 px-4 sm:px-0">Fig 5. Competitive Analysis on AAC Communication, Managing Overstimulation & AI/VR.</h6>
       </div>
       <img src="accessichat-analysis1.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
     </div>
@@ -344,7 +344,7 @@
 <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
   <div class="image-container">
     <div class="md:border-grey border-x sm:px-4">
-      <h6 class="py-3 px-4 sm:px-0">Fig 6. Competitive Analysis on AAC Communication, Managing Overstimulation & AI/VR.</h6>
+      <h6 class="py-3 px-4 sm:px-0">Fig 6. AccessiChat Product Feature. </h6>
     </div>
     <img src="accessichat1.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
   </div>
@@ -369,7 +369,7 @@
   <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
     <div class="image-container">
       <div class="md:border-grey border-x sm:px-4">
-        <h6 class="py-3 px-4 sm:px-0">Fig 10. Writing an Entry Findings.</h6>
+        <h6 class="py-3 px-4 sm:px-0">Fig 7. Crazy 8's Method (Pink).</h6>
       </div>
       <img src="accessichat-crazy8s.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
     </div>
@@ -379,7 +379,7 @@
   <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
     <div class="image-container">
       <div class="md:border-grey border-x sm:px-4">
-        <h6 class="py-3 px-4 sm:px-0">Fig 10. Writing an Entry Findings.</h6>
+        <h6 class="py-3 px-4 sm:px-0">Fig 8. Heatmap Voting.</h6>
       </div>
       <img src="accessichat-heatmap voting.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
     </div>
@@ -387,7 +387,7 @@
   <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
     <div class="image-container">
       <div class="md:border-grey border-x sm:px-4">
-        <h6 class="py-3 px-4 sm:px-0">Fig 10. Writing an Entry Findings.</h6>
+        <h6 class="py-3 px-4 sm:px-0">Fig 9. Winning Idea/Features.</h6>
       </div>
       <img src="accessichat-winner.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
     </div>
@@ -445,7 +445,7 @@
     </div>
     <div class="flex flex-col lg:px-16 gap-10 lg:w-[70%]">
       <div class="flex flex-col gap-3 pt-4">
-        <h4 class="text-left">We began with initial wireframes and developed low-fidelity prototypes to test key features like scenario practice and speech-to-text functionality.
+        <h4 class="text-left">I began my process with rough sketches and developed 2 rounds of low-fidelity prototypes to test key features like scenario practice and goal setting.
         </h4>
       </div>
     </div>
@@ -455,7 +455,7 @@
   <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
     <div class="image-container">
       <div class="md:border-grey border-x sm:px-4">
-        <h6 class="py-3 px-4 sm:px-0">Fig 10. Writing an Entry Findings.</h6>
+        <h6 class="py-3 px-4 sm:px-0">Fig 10. Rough Sketches of Scenario Practice and Profile.</h6>
       </div>
       <img src="accessi-sketch.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
     </div>
@@ -463,7 +463,7 @@
   <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
     <div class="image-container">
       <div class="md:border-grey border-x sm:px-4">
-        <h6 class="py-3 px-4 sm:px-0">Fig 10. Writing an Entry Findings.</h6>
+        <h6 class="py-3 px-4 sm:px-0">Fig 11. Award System Sketches and Notes.</h6>
       </div>
       <img src="accessi-sketch2.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
     </div>
@@ -473,16 +473,23 @@
   <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
     <div class="image-container">
       <div class="md:border-grey border-x sm:px-4">
-        <h6 class="py-3 px-4 sm:px-0">Fig 6. Lo-fi prototypes on Home Page.</h6>
+        <h6 class="py-3 px-4 sm:px-0">Fig 12. Lo-fi Prototypes on Scenario Practice (Rounds 1-2).</h6>
       </div>
       <img src="accessichat-lowfi2.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
     </div>
   </section>
-
   <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
     <div class="image-container">
       <div class="md:border-grey border-x sm:px-4">
-        <h6 class="py-3 px-4 sm:px-0">Fig 7. Corresponding Mid-fi prototypes.</h6>
+        <h6 class="py-3 px-4 sm:px-0">Fig 13. Lo-fi Prototypes on Goal Setting (Round 1).</h6>
+      </div>
+      <img src="accessichat-lowfi1.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
+    </div>
+  </section>
+  <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
+    <div class="image-container">
+      <div class="md:border-grey border-x sm:px-4">
+        <h6 class="py-3 px-4 sm:px-0">Fig 13. Lo-fi Prototypes on Goal and Routine Setting (Round 2).</h6>
       </div>
       <img src="accessichat-lowfi.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
     </div>
@@ -505,7 +512,7 @@
   <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
     <div class="image-container">
       <div class="md:border-grey border-x sm:px-4">
-        <h6 class="py-3 px-4 sm:px-0">Fig 1. In-app features.</h6>
+        <h6 class="py-3 px-4 sm:px-0">Fig 14. Risk Assignment and the Highest Risks to our Product.</h6>
       </div>
       <img src="accessichat-assumptions-map.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
     </div>
@@ -532,7 +539,7 @@
 <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
   <div class="image-container">
     <div class="md:border-grey border-x sm:px-4">
-      <h6 class="py-3 px-4 sm:px-0">Fig 8. Home page Findings.</h6>
+      <h6 class="py-3 px-4 sm:px-0">Fig 15. Home page Findings.</h6>
     </div>
     <img src="accessichat-use-home.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
   </div>
@@ -541,7 +548,7 @@
 <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
   <div class="image-container">
     <div class="md:border-grey border-x sm:px-4">
-      <h6 class="py-3 px-4 sm:px-0">Fig 9. Mood Categorization Findings.</h6>
+      <h6 class="py-3 px-4 sm:px-0">Fig 16. Scenario Practice Findings.</h6>
     </div>
     <img src="accessichat-use-scenario.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
   </div>
@@ -550,7 +557,7 @@
 <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
   <div class="image-container">
     <div class="md:border-grey border-x sm:px-4">
-      <h6 class="py-3 px-4 sm:px-0">Fig 10. Writing an Entry Findings.</h6>
+      <h6 class="py-3 px-4 sm:px-0">Fig 17. AI Pet Findings.</h6>
     </div>
     <img src="accessichat-use-aipet.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
   </div>
@@ -558,7 +565,7 @@
 <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
   <div class="image-container">
     <div class="md:border-grey border-x sm:px-4">
-      <h6 class="py-3 px-4 sm:px-0">Fig 11. Style Guide // Font, Colours, Icons.</h6>
+      <h6 class="py-3 px-4 sm:px-0">Fig 18. Goal and Routine Setting Findings.</h6>
     </div>
     <img src="accessichat-use-goal.png" class="md:border border-grey md:border-b-0 w-full" alt="All Features">
   </div>
@@ -602,7 +609,7 @@
   <div class="image-container">
     <img src="accesi-hero2.png" class="md:border border-grey md:border-t-0 w-full" alt="All Features">
     <div class="md:border-grey border-x sm:px-4">
-      <h6 class="py-3 px-4 sm:px-0">Fig 13. Mood Categorization.</h6>
+      <h6 class="py-3 px-4 sm:px-0">Fig 19. Scenario Practice // Asking for Directions.</h6>
     </div>
   </div>
 </section>
