added links to buttons, changed award dates to be correct, and changed content after proofreading

--- a/src/accessichat.html
+++ b/src/accessichat.html
@@ -41,7 +41,7 @@
       <div class="flex flex-col gap-8 pt-1">
         <h2>Accessichat — Honourable Mention in Augmented Creativity</h2>
         <h4>
-            AccessiChat is an augmentative and alternative communication (AAC) application designed to improve verbal and written communication for individuals with visible and invisible disabilities.
+            Accessichat is an augmentative and alternative communication (AAC) application designed to improve verbal and written communication for individuals with visible and invisible disabilities.
             The app leverages AI to provide accessible communication tools,
             helping users achieve greater independence and confidence in their daily interactions.
         </h4>
@@ -62,13 +62,15 @@
           <h6>Farwa Babar & Adrianna Estrada</h6>
         </div>
       </div>
-      <div class="flex flex-col lg:px-16">
-        <button class="rounded-xl md:rounded-2xl px-4 pb-3 py-1 border-2 border-grey hover:bg-gray-950 hover:text-white hover:border-gray-950 transition flex justify-center items-baseline gap-4">
-          <p>
-            <i class="fa-brands fa-figma"></i>
-          </p>
-          <h4>Try the Figma Link</h4>
-        </button>
+      <div>
+        <a href="https://www.figma.com/proto/xzcrgVq1JayAV9BSRoBcbk/AccessiChat?page-id=165%3A917&node-id=235-5820&viewport=-1109%2C849%2C0.3&t=JzOe134Wgy3o8pQB-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=235%3A5820&show-proto-sidebar=1" target="_blank" class="flex flex-col lg:px-16 hover-image">
+          <button class="rounded-xl md:rounded-2xl px-4 pb-3 py-1 border-2 border-grey hover:bg-gray-950 hover:text-white hover:border-gray-950 transition flex justify-center items-baseline gap-4">
+            <p>
+              <i class="fa-brands fa-figma"></i>
+            </p>
+            <h4>Try the Figma Link</h4>
+          </button>
+        </a>
         </div>
     <!-- Card Grouping for Information -->
  
@@ -111,10 +113,10 @@
           <h6 class="custom-list-item">Conducting User Interviews</h6>
           <h6 class="custom-list-item">Competitive Analysis (Researching AI & ACC tools)</h6>
           <h6 class="custom-list-item">Interpreting Quantitative & Qualitative Data</h6>
-          <h6 class="custom-list-item">Crafting User Personas</h6>
+          <h6 class="custom-list-item">Creating Empathy Maps</h6>
           <h6 class="custom-list-item">Developing User Flows</h6>
           <h6 class="custom-list-item">Designing Wireframes</h6>
-          <h6 class="custom-list-item">Streamlining the Design System</h6>
+          <h6 class="custom-list-item">Streamlining the Style Guide</h6>
         </div>
       </div>
     </div>
@@ -359,7 +361,7 @@
   <div class="flex flex-col lg:px-16 gap-4 md:gap-10 lg:w-[70%]">
     <div class="flex flex-col gap-4 pt-4">
       <h4 class="text-left">
-        To develop our solution, we began with a brainstorming exercise called Crazy Eights, which allowed us to generate a variety of creative ideas for the app. We then utilized heatmap voting to evaluate and identify the most promising features, ultimately determining the winning concepts to focus on.
+        To develop our solution, we began with a brainstorming exercise called Crazy 8's, which allowed us to generate a variety of creative ideas for the app. We then utilized heatmap voting to evaluate and identify the most promising features, ultimately determining the winning concepts to focus on.
       </h4>  
     </div>
   </div>
@@ -504,7 +506,7 @@
     </div>
     <div class="flex flex-col lg:px-16 gap-10 lg:w-[70%]">
       <div class="flex flex-col gap-3 pt-4">
-        <h4 class="text-left">Before user testing, we created an assumptions map to guide our testing priorities. This helped us evaluate potential risks, uncertainties, and impacts of our design decisions, informing the questions we would ask during user testing.
+        <h4 class="text-left">Before user testing, we created an Assumptions Map to guide our testing priorities. This helped us evaluate potential risks, uncertainties, and impacts of our design decisions, informing the questions we would ask during user testing.
         </h4>
       </div>
     </div>
@@ -529,7 +531,7 @@
   </div>
   <div class="flex flex-col lg:px-16 gap-10 lg:w-[70%]">
     <div class="flex flex-col gap-3 pt-4">
-      <h4 class="text-left">Our three participants each engaged in three rounds of testing, with each session lasting 20 minutes over Zoom. During each session, participants shared their screens and cameras while exploring the core features of the app. We evaluated both their ease of using the app and asked specific questions derived from our Assumptions Map to validate or challenge our initial assumptions. 
+      <h4 class="text-left">Our 3 participants each engaged in 2 rounds of testing, with each session lasting 20 minutes over Zoom. During each session, participants shared their screens and cameras while exploring the core features of the app. We evaluated both their ease of using the app and asked specific questions derived from our Assumptions Map to validate or challenge our initial assumptions. 
       </h4>
 
     </div>
