--- a/src/hereafter.html
+++ b/src/hereafter.html
@@ -61,13 +61,15 @@
           <h6>Jersey Stuart, Rita Zhan, Shriya Mujumdar</h6>
         </div>
       </div>
-      <div class="flex flex-col lg:px-16">
-        <button class="rounded-xl md:rounded-2xl px-4 pb-3 py-1 border-2 border-grey hover:bg-gray-950 hover:text-white hover:border-gray-950 transition flex justify-center items-baseline gap-4">
-          <p>
-            <i class="fa-brands fa-figma"></i>
-          </p>
-          <h4>Try the Figma Link</h4>
-        </button>
+      <div>
+        <a href="https://www.figma.com/proto/QhcqwAACz6sgnow3txen1O/here%3Aafter?page-id=753%3A6059&node-id=754-6064&p=f&viewport=256%2C372%2C0.06&t=cJokFdqDjqyB7OPI-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=754%3A6064&show-proto-sidebar=1" target="_blank" class="flex flex-col lg:px-16 hover-image">
+          <button class="rounded-xl md:rounded-2xl px-4 pb-3 py-1 border-2 border-grey hover:bg-gray-950 hover:text-white hover:border-gray-950 transition flex justify-center items-baseline gap-4">
+            <p>
+              <i class="fa-brands fa-figma"></i>
+            </p>
+            <h4>Try the Figma Link</h4>
+          </button>
+        </a>
         </div>
     <!-- Card Grouping for Information -->
  
@@ -275,13 +277,13 @@
   <!-- Content Section -->
   <div class="flex flex-col lg:px-16 lg:w-[70%]">
    
-<h4>Through a prioritization grid, we brainstormed
+<h4>Through a Prioritization Grid, we brainstormed
   potential solutions, considering both Big Bets
   (aka high-risk, high-reward ideas) and No-Brainers (simple,
   high-impact solutions). After discussing the options, we
    voted on the top 3 priorities that would deliver the most value.
     This process led to a clear problem statement that 
-    focused on addressing the primary painpoints our user had
+    focused on addressing the primary painpoints our user had.
 </h4>
         </div>
       </div>
@@ -294,7 +296,7 @@
   <div class="image-container">
     <img src="hereafter-idea-gen-1.png" class="md:border border-grey md:border-t-0 w-full" alt="All Features">
     <div class="md:border-grey border-x sm:px-4">
-      <h6 class="py-3 px-4 sm:px-0">Fig 3. MVP and Problem Statement. </h6>
+      <h6 class="py-3 px-4 sm:px-0">Fig 3. Prioritization Grid. </h6>
     </div>
   </div>
 </section>
