--- a/src/index.html
+++ b/src/index.html
@@ -126,15 +126,15 @@
       <p>DUBSTECH & DESIGN BUDDIES PROTOTHON</p>
       <h4>3rd Place Winner in the UX Gaming Track</h4>
     </div>
-    <p>2023–2024</p>
+    <p>2024</p>
   </div>
 
   <div class="flex flex-col md:flex-row py-6 justify-between gap-4">
     <div class="details flex flex-col flex-1">
-      <p>DSA WINTER DESN'ATHON @ YORK UNIVERSITY</p>
-      <h4>2nd Place Winner in designing a mobile for Student Empowerment</h4>
+      <p>DSA WINTER DESN'ATHON @ YORK UNIVERSITY x 2</p>
+      <h4>2nd Place Winner in designing a mobile for Student Empowerment & Sustainability</h4>
     </div>
-    <p>2023–2024</p>
+    <p>2022–2023</p>
   </div>
 
 </section>
@@ -179,8 +179,8 @@
 
 <footer-component></footer-component>
     
+<script type="module" src="main.js"></script>
 <script type="module" src="cursor.js"></script>
-      <script type="module" src="main.js"></script>
 
   </body>
 </html>
