fix: running build error

--- a/src/about.html
+++ b/src/about.html
@@ -10,7 +10,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <title>Nina's Folio</title>
+        <title>Nina's Portfoilo</title>
     </head>
 <body>
   <script src="header.js"></script> <!-- where header.js is the name of our reusable component script -->
