--- a/src/accessichat.html
+++ b/src/accessichat.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-  <title>Nina's Folio</title>
+  <title>Nina's Portfoilo</title>
 </head>
 <body>
   <!-- Import the header component -->
