--- a/src/archive.html
+++ b/src/archive.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-        <title>Nina's Folio</title>
+        <title>Nina's Portfoilo</title>
     </head>
 <body>
   <script src="header.js"></script> <!-- where header.js is the name of our reusable component script -->
