--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
 
 
 <body>
-  <script src="header.js"></script> <!-- where header.js is the name of our reusable component script -->
-  <script src="footer.js"></script> <!-- where header.js is the name of our reusable component script -->
+  <script src="header.js" type="module"></script> <!-- where header.js is the name of our reusable component script -->
+  <script src="footer.js" type="module"></script> <!-- where header.js is the name of our reusable component script -->
 <header-component></header-component>
 
 
