--- a/src/about.html
+++ b/src/about.html
@@ -13,8 +13,8 @@
         <title>Nina's Portfoilo</title>
     </head>
 <body>
-  <script src="header.js"></script> <!-- where header.js is the name of our reusable component script -->
-  <script src="footer.js"></script> <!-- where header.js is the name of our reusable component script -->
+  <script src="header.js" type="module"></script> <!-- where header.js is the name of our reusable component script -->
+  <script src="footer.js" type="module"></script> <!-- where header.js is the name of our reusable component script -->
 
 <header-component></header-component>
 
