--- a/src/archive.html
+++ b/src/archive.html
@@ -12,8 +12,8 @@
         <title>Nina's Portfoilo</title>
     </head>
 <body>
-  <script src="header.js"></script> <!-- where header.js is the name of our reusable component script -->
-  <script src="footer.js"></script> <!-- where header.js is the name of our reusable component script -->
+  <script type="module" src="header.js"></script> <!-- where header.js is the name of our reusable component script -->
+  <script type="module" src="footer.js"></script> <!-- where header.js is the name of our reusable component script -->
 
 <header-component></header-component>
 
