--- a/src/hereafter.html
+++ b/src/hereafter.html
@@ -21,7 +21,7 @@
     <span class="cursor-text"></span>
   </div>
   <div class="cursor-follower"></div>
-  <script src="back-button.js"></script>
+  <script type="module" src="back-button.js"></script>
 
 <!-- Content Section -->
 <main>
