fix: hero images added back

--- a/src/hereafter.html
+++ b/src/hereafter.html
@@ -26,7 +26,7 @@
 <!-- Content Section -->
 <main>
   
-    <div class="py-60 pt-4 md:pt-32 bg-[#f0f0f1] flex-col gap-8 px-4 md:px-10 bg-[url('hereafter-hero.png')] bg-cover bg-center">
+    <div class="py-60 pt-4 md:pt-32 flex-col gap-8 px-4 md:px-10 bg-[url('hereafter-hero.png')] bg-cover bg-center">
       <back-button link="index.html"></back-button>
     </div>
 
