replacing images to lower res, updated nav comp

--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
 
 </section>
 <section class="px-4 py-4 md:px-16 flex flex-col justify-center items-center md:items-start gap-3 bg-gray-950 text-white">
-  <p>All case studies are currently under construction ⁽⁽◝( • ω • )◜⁾⁾	</p>
+  <p>This website was designed and coded by me ⁽⁽◝( • ω • )◜⁾⁾	</p>
 </section>
       <section class="flex flex-col md:flex-row pt-8 md:pt-12 md:pb-6 gap-6 flex-1">
         <div class="flex flex-col gap-4 md:gap-8 px-4 md:px-16">
