--- a/src/accessichat.html
+++ b/src/accessichat.html
@@ -198,7 +198,7 @@
 
   <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
     <div class="image-container">
-      <img src="accessichat-empathy-map.jpg" class="md:border border-grey md:border-t-0 w-full" alt="All Features">
+      <img src="accessichat-empathy-map.png" class="md:border border-grey md:border-t-0 w-full" alt="All Features">
       <div class="md:border-grey border-x sm:px-4">
         <h6 class="py-3 px-4 sm:px-0">Fig 4. Our Empathy Maps based on 3 Users</h6>
       </div>
