linked hero images better

--- a/src/accessichat.html
+++ b/src/accessichat.html
@@ -26,9 +26,14 @@
 <!-- Content Section -->
 <main>
   
-    <div class="py-60 pt-4 md:pt-32 flex-col gap-8 px-4 md:px-10 bg-[url('accesi-hero.png')] bg-cover bg-top">
+  <div class="relative py-60 pt-4 md:pt-32 flex flex-col gap-8 px-4 md:px-10">
+    <img src="accesi-hero.png" alt="Hero image" class="absolute top-0 left-0 w-full h-full object-cover object-top">
+    <div class="relative z-10">
       <back-button link="index.html"></back-button>
     </div>
+  </div>
+  
+
 
 
   </main>
