--- a/src/hereafter.html
+++ b/src/hereafter.html
@@ -26,10 +26,13 @@
 <!-- Content Section -->
 <main>
   
-    <div class="py-60 pt-4 md:pt-32 flex-col gap-8 px-4 md:px-10 bg-[url('hereafter-hero.png')] bg-cover bg-center">
+  <div class="relative py-60 pt-4 md:pt-32 flex flex-col gap-8 px-4 md:px-10">
+    <img src="hereafter-hero.png" alt="Hero image" class="absolute top-0 left-0 w-full h-full object-cover">
+    <div class="relative z-10">
       <back-button link="index.html"></back-button>
     </div>
-
+  </div>
+  
 
   </main>
   
