changed music image/hero properties. added more space to awards

--- a/src/index.html
+++ b/src/index.html
@@ -25,68 +25,33 @@
   <span class="cursor-text"></span>
 </div>
 <div class="cursor-follower"></div>
-<section class="px-4 md:px-0 md:pl-16 pb-8 sm:0">
-  <div class="flex flex-col pt-4 md:pt-48 flex-1 pr-4 md:pb-2">
-    <h5 class="font-light text-[60px] md:text-[100px] typing">Hi, I'm Nina</h5>
-  </div>
-  <div class="flex flex-col md:flex-row w-full justify-between md:pb-6">
-    <div class="flex flex-col flex-1 md:py-0 gap-6 md:gap-8">
-      <h4 class="smolwidth">As a uxui designer, I look for ways to make things just right while aligning design with real-world needs</h4>
+<section class="px-4 md:px-16 pb-8 sm:0">
+  <div class="flex flex-col md:flex-row w-full justify-between pt-4 md:pt-48 pb-8 md:pb-2 justify-end md:items-end gap-3">
+  
+    <!-- Text content -->
+    <div class="flex flex-col flex-1 gap-6 md:gap-8">
+      <h5 class="font-light text-[60px] md:text-[72px] typing">Hi, I'm Nina</h5>
+      <h4 class="smolwidth">As a UX/UI designer, I look for ways to make things just right while aligning design with real-world needs</h4>
       <h6 class="smolwidth">* When I'm not designing, I'm inspired by music, fashion, and the world around me „• ֊ •„</h6>
     </div>
-    <div class="justify-end items-center md:pr-16">
+    <div class="flex justify-center mb-6 md:mb-0">
       <a href="about.html">
         <img 
-        src="musi.png" 
-        class="hover-image hidden md:block md:h-40 lg:h-64 w-auto" 
-        alt="Music Icon"
-      >
-      
+          src="musi.png" 
+          class="hover-image md:h-40 lg:h-64 w-auto" 
+          alt="Music Icon"
+        >
       </a>
     </div>
+    
   </div>
 </section>
 
 
 
 
-<section class="carousel-container relative w-full py-2 pb-3 text-black border-black border overflow-hidden border-x-0">
-  <div class="carousel flex items-center gap-3 animate-scroll whitespace-nowrap">
-    <h3>EXOMIS+DEVELOPMENT</h3>
-    <span><h3>3!@#%</h3></span>
-    <h3>YORK UNIVERSITY</h3>
-    <span><h3>4$#@!</h3></span>
-    <h3>WINGED CANVAS</h3>
-    <span><h3>?2&%</h3></span>
-    <h3>GOODSELF</h3>
-    <span><h3>*@&^#</h3></span>
-    <!-- Repeat content twice to create the illusion of infinite scroll -->
-    <h3>EXOMIS+DEVELOPMENT</h3>
-    <span><h3>3!@#%</h3></span>
-    <h3>YORK UNIVERSITY</h3>
-    <span><h3>4$#@!</h3></span>
-    <h3>WINGED CANVAS</h3>
-    <span><h3>?2&%</h3></span>
-    <h3>GOODSELF</h3>
-    <span><h3>*@&^#</h3></span>
-    <h3>EXOMIS+DEVELOPMENT</h3>
-    <span><h3>3!@#%</h3></span>
-    <h3>YORK UNIVERSITY</h3>
-    <span><h3>4$#@!</h3></span>
-    <h3>WINGED CANVAS</h3>
-    <span><h3>?2&%</h3></span>
-    <h3>GOODSELF</h3>
-    <span><h3>*@&^#</h3></span>
-    <h3>EXOMIS+DEVELOPMENT</h3>
-    <span><h3>3!@#%</h3></span>
-    <h3>YORK UNIVERSITY</h3>
-    <span><h3>4$#@!</h3></span>
-    <h3>WINGED CANVAS</h3>
-    <span><h3>?2&%</h3></span>
-    <h3>GOODSELF</h3>
-    <span><h3>*@&^#</h3></span>
-  </div>
-</section>
+
+
 
 
   <section class="pt-6 md:pt-16">
@@ -113,7 +78,7 @@
 
 <section class="py-8 md:py-12 md:px-16 flex flex-col px-4 gap-0 md-gap-3 border-y border-grey">
   <h3>Recognition</h3>
-  <div class="flex flex-col md:flex-row border-b border-grey py-6 justify-between gap-4">
+  <div class="flex flex-col md:flex-row border-b border-grey py-10 justify-between gap-4">
     <div class="details flex flex-col flex-1">
       <p>RGD STUDENT AWARDS x 2</p>
       <h4>1st Place Tie-Winner in Forbes UX Design & Honourable Mention in Augmented Creativity</h4>
@@ -121,7 +86,7 @@
     <p>2023–2024</p>
   </div>
 
-  <div class="flex flex-col md:flex-row border-b border-grey py-6 justify-between gap-4">
+  <div class="flex flex-col md:flex-row border-b border-grey py-10 justify-between gap-4">
     <div class="details flex flex-col flex-1">
       <p>DUBSTECH & DESIGN BUDDIES PROTOTHON</p>
       <h4>3rd Place Winner in the UX Gaming Track</h4>
@@ -129,7 +94,7 @@
     <p>2024</p>
   </div>
 
-  <div class="flex flex-col md:flex-row py-6 justify-between gap-4">
+  <div class="flex flex-col md:flex-row py-10 justify-between gap-4">
     <div class="details flex flex-col flex-1">
       <p>DSA WINTER DESN'ATHON @ YORK UNIVERSITY x 2</p>
       <h4>2nd Place Winner in designing a mobile for Student Empowerment & Sustainability</h4>
