--- a/src/archive.html
+++ b/src/archive.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <link rel="icon" type="image/png" href="ladybug.png">
         <link rel="stylesheet" href="global.styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&family=Syne:wght@400..800&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet">
@@ -47,11 +48,11 @@
       </section>
 
 
-      <div class="pb-8 flex flex-col md:flex-row md:pr-16 gap-y-4 md:gap-y-8 px-4 gap-16 md:px-0">
+      <div class="pb-8 flex flex-col md:flex-row md:pr-16 gap-y-4 md:gap-y-8 px-4 gap-12 md:px-0">
         <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#f30559] grow-0">
-          <h2 class="text-white text-center">design</h2>
+          <h3 class="text-white text-center">design</h3>
         </div>
-        <div class="grid grid-cols-1 md:grid-cols-2 flex-1 cards-section2"></div>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 flex-1 cards-section2"></div>
       </div>
       
 
