--- a/src/index.html
+++ b/src/index.html
@@ -57,14 +57,14 @@
 
   <section class="pt-6 md:pt-16 pb-16">
     <div class="pb-8 flex flex-col md:flex-row md:pr-16 gap-y-4 md:gap-y-8 px-4 gap-12 md:px-0">
-      <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-blob grow-0 border">
+      <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#4866CC] grow-0 border">
         <h3 class="text-white text-center ">uxui</h3>
       </div>
       <div class="grid grid-cols-none md:grid-cols-2 flex-1 gap-4 cards-section"></div>
     </div>
     
     <div class="pb-8 flex flex-col md:flex-row md:pr-16 gap-y-4 md:gap-y-8 px-4 gap-12 md:px-0">
-      <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-lime-600 grow-0">
+      <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#13A368] grow-0">
         <h3 class="text-white text-center">motion</h3>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-2 flex-1 gap-4 cards-section3"></div>
