change button sizes, hid kaomojis on index//mobile

--- a/src/accessichat.html
+++ b/src/accessichat.html
@@ -41,7 +41,7 @@
       
       
 
-  <section class="flex flex-col pt-8 md:pt-12 sm:px-10 pb-8 md:pb-12 gap-10 px-4 border-grey border-b">
+  <section class="flex flex-col pt-8 md:py-20 sm:px-10 pb-8 gap-20 px-4 border-grey border-b">
     <div class="flex flex-col lg:px-16 gap-10 lg:w-[80%]">
       <div class="flex flex-col gap-8 pt-1">
         <h2>Accessichat — Honourable Mention in Augmented Creativity</h2>
@@ -69,7 +69,7 @@
       </div>
       <div>
         <a href="https://www.figma.com/proto/xzcrgVq1JayAV9BSRoBcbk/AccessiChat?page-id=165%3A917&node-id=235-5820&viewport=-1109%2C849%2C0.3&t=JzOe134Wgy3o8pQB-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=235%3A5820&show-proto-sidebar=1" target="_blank" class="flex flex-col lg:px-16 hover-image">
-          <button class="rounded-xl md:rounded-2xl px-4 pb-3 py-1 border-2 border-grey hover:bg-gray-950 hover:text-white hover:border-gray-950 transition flex justify-center items-baseline gap-4">
+          <button class="rounded-xl md:rounded-2xl px-4 pb-6 py-5 border-2 border-grey hover:bg-gray-950 hover:text-white hover:border-gray-950 transition flex justify-center items-baseline gap-4">
             <p>
               <i class="fa-brands fa-figma"></i>
             </p>
