--- a/src/hereafter.html
+++ b/src/hereafter.html
@@ -40,7 +40,7 @@
       
       
 
-  <section class="flex flex-col pt-8 md:pt-12 sm:px-10 pb-8 md:pb-12 gap-10 px-4 border-grey border-b">
+  <section class="flex flex-col pt-8 md:py-20 sm:px-10 pb-8 gap-20 px-4 border-grey border-b">
     <div class="flex flex-col lg:px-16 gap-10 lg:w-[80%]">
       <div class="flex flex-col gap-8 pt-1">
         <h2>Here:after — UX Award-Winner</h2>
@@ -67,7 +67,7 @@
       </div>
       <div>
         <a href="https://www.figma.com/proto/QhcqwAACz6sgnow3txen1O/here%3Aafter?page-id=753%3A6059&node-id=754-6064&p=f&viewport=256%2C372%2C0.06&t=cJokFdqDjqyB7OPI-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=754%3A6064&show-proto-sidebar=1" target="_blank" class="flex flex-col lg:px-16 hover-image">
-          <button class="rounded-xl md:rounded-2xl px-4 pb-3 py-1 border-2 border-grey hover:bg-gray-950 hover:text-white hover:border-gray-950 transition flex justify-center items-baseline gap-4">
+          <button class="rounded-xl md:rounded-2xl px-4 pb-6 py-5 border-2 border-grey hover:bg-gray-950 hover:text-white hover:border-gray-950 transition flex justify-center items-baseline gap-4">
             <p>
               <i class="fa-brands fa-figma"></i>
             </p>
