--- a/src/index.html
+++ b/src/index.html
@@ -104,8 +104,12 @@
 
 </section>
 <section class="px-4 py-4 md:px-16 flex flex-col justify-center items-center md:items-start gap-3 bg-gray-950 text-white">
-  <p>This website was designed and coded by me ⁽⁽◝( • ω • )◜⁾⁾	</p>
+  <div class="flex text-nowrap gap-2">
+    <p>This website was designed and coded by me</p> 
+    <p class="hidden md:block md:visible">⁽⁽◝( • ω • )◜⁾⁾</p>
+  </div>
 </section>
+
       <section class="flex flex-col md:flex-row pt-8 md:pt-12 md:pb-6 gap-6 flex-1">
         <div class="flex flex-col gap-4 md:gap-8 px-4 md:px-16">
             <h3>Let's Chat</h3>
