--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 </div>
 <div class="cursor-follower"></div>
 <section class="px-4 md:px-16 pb-8 sm:0">
-  <div class="flex flex-col md:flex-row w-full justify-between pt-4 md:pt-48 pb-8 md:pb-2 justify-end md:items-end gap-3">
+  <div class="flex flex-col md:flex-row w-full justify-between pt-12 md:pt-48 justify-end md:items-end gap-3">
   
     <!-- Text content -->
     <div class="flex flex-col flex-1 gap-6 md:gap-8">
@@ -55,15 +55,15 @@
 
 
 
-  <section class="pt-6 md:pt-16 pb-16">
-    <div class="pb-8 flex flex-col md:flex-row md:pr-16 gap-y-4 md:gap-y-8 px-4 gap-12 md:px-0">
+  <section class=" md:pt-16 pb-16">
+    <div class="pb-8 flex flex-col md:flex-row md:pr-16 gap-y-8 px-4 gap-12 md:px-0">
       <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#4866CC] grow-0 border">
         <h3 class="text-white text-center ">uxui</h3>
       </div>
       <div class="grid grid-cols-none md:grid-cols-2 flex-1 gap-4 cards-section"></div>
     </div>
     
-    <div class="pb-8 flex flex-col md:flex-row md:pr-16 gap-y-4 md:gap-y-8 px-4 gap-12 md:px-0">
+    <div class="pb-8 flex flex-col md:flex-row md:pr-16 md:gap-y-8 px-4 gap-12 md:px-0">
       <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#13A368] grow-0">
         <h3 class="text-white text-center">motion</h3>
       </div>
