added back js cards//branding

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
 </div>
 <div class="cursor-follower"></div>
 <section class="px-4 md:px-16 pb-8 sm:0">
-  <div class="flex flex-col md:flex-row w-full justify-between pt-12 md:pt-48 justify-end md:items-end gap-3">
-  
+  <div class="flex flex-col md:flex-row w-full justify-between pt-24 md:pt-48 justify-end md:items-end gap-3">
+
     <!-- Text content -->
     <div class="flex flex-col flex-1 gap-6 md:gap-8">
       <h5 class="font-light text-[60px] md:text-[72px] typing">Hi, I'm Nina</h5>
@@ -103,7 +103,7 @@
 <section class="px-4 py-4 md:px-16 flex flex-col justify-center items-center md:items-start gap-3 bg-gray-950 text-white">
   <div class="flex text-nowrap gap-2">
     <p>This website was designed and coded by me</p> 
-    <p class="hidden md:block md:visible">⁽⁽◝( • ω • )◜⁾⁾</p>
+    <p class="hidden sm:block sm:visible">⁽⁽◝( • ω • )◜⁾⁾</p>
   </div>
 </section>
 
